<resources>
    <string name="app_name">WeatherApp</string>
    <string name="placeholder_temperature">19</string>
    <string name="placeholder_city">Melbourne</string>
    <string name="placeholder_temperature_high_low">99/0</string>
    <string name="placeholder_weather_condition">Clear text</string>
    <string name="degree_symbol">°</string>
    <string name="placeholder_forecast_date">Sun, 10 Jan</string>
    <string name="more_forecast_btn_text">View 15 days forecast</string>
</resources>