<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cityName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/placeholder_city"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_temperature"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityName_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/degree_symbol"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/temperature_tv"
        app:layout_constraintTop_toTopOf="@id/temperature_tv" />

    <TextView
        android:id="@+id/temperatureHiLo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_temperature_high_low"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_tv" />

    <TextView
        android:id="@+id/weatherCondition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/placeholder_weather_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureHiLo_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/forecastData_layout"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.weatherapp.ui.main.view.ForecastItemView
            android:layout_width="0dp"
            android:id="@+id/forecast1_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />

        <com.example.weatherapp.ui.main.view.ForecastItemView
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:id="@+id/forecast2_view"
            app:layout_constraintTop_toBottomOf="@id/forecast1_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />

        <com.example.weatherapp.ui.main.view.ForecastItemView
            android:layout_width="0dp"
            android:id="@+id/forecast3_view"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/forecast2_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/forecastData_layout"
        app:layout_constraintStart_toStartOf="@id/forecastData_layout"
        app:layout_constraintEnd_toEndOf="@id/forecastData_layout"
        app:layout_constraintBottom_toBottomOf="@id/forecastData_layout"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>